--- a/src/app/views/pages/notes/edit/edit.component.html
+++ b/src/app/views/pages/notes/edit/edit.component.html
@@ -1,3 +1,8 @@
+<div class="mb-4">
+	<a class="text-gray-400 hover:text-gray-100 text-lg" [routerLink]="['/notes']">
+		<fa-icon [icon]="faArrowLeft"></fa-icon> Volver
+	</a>
+</div>
 <form [formGroup]="form" class="w-full" *ngIf="note">
 	<div class="mb-4">
 		<label htmlFor="txtTitle" class="text-gray-400 font-medium text-sm mb-2">Titulo</label>
@@ -37,7 +42,7 @@
 			autoComplete='off'
 		></textarea>
 	</div>
-	<div class="flex justify-between items-center">
+	<div class="flex justify-start items-center">
 		<button
 			type="button"
 			class="px-4 py-2 bg-sky-600 hover:bg-sky-700 text-white rounded"
@@ -45,6 +50,5 @@
 		>
 			Guardar cambios
 		</button>
-		<a [routerLink]="['/notes']" class="bg-gray-700 hover:bg-gray-600 text-white px-4 py-2 rounded">Cancelar</a>
 	</div>
 </form>
