--- a/src/app/views/pages/notes/insert/insert.component.html
+++ b/src/app/views/pages/notes/insert/insert.component.html
@@ -1,3 +1,8 @@
+<div class="mb-4">
+	<a class="text-gray-400 hover:text-gray-100 text-lg" [routerLink]="['/notes']">
+		<fa-icon [icon]="faArrowLeft"></fa-icon> Volver
+	</a>
+</div>
 <form [formGroup]="form" class="w-full">
 	<div class="mb-4">
 		<label htmlFor="txtTitle" class="text-gray-400 font-medium text-sm mb-2">Titulo</label>
