--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
 <main class="h-screen w-screen overflow-auto scrollbar-thumb-slate-500 scrollbar-thin scrollbar-track-slate-600">
+	<app-loading />
 	<router-outlet></router-outlet>
 </main>
